Fixed the overflow error. No more scroll bars

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,13 +52,17 @@ nav {
 }
 
 .card-body {
+    width: 95%;
     img {
         transform: scale(.25);
-        margin: -45%;
-        pointer-events :none;
+        margin: -47%;
+        padding-top: 7%;
+        pointer-events: none;
         float: right;
         z-index: 1000;
         position:relative;
+
+    
     }
 }
 
@@ -67,6 +71,8 @@ nav {
     margin-bottom: $graph-margin;
 }
 
-
+.container {
+   // overflow-x: hidden;
+}
 
 
